--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,6 +16,11 @@ body {
     src: url(../../fonts/Gotham-Bold.ttf);
 }
 
+@font-face {
+    font-family: 'gothamXLight';
+    src: url(../../fonts/Gotham-XLight.ttf);
+}
+
 .navbar-nav > li > a,
 .navbar-brand {
     padding-top: 8px !important;
@@ -100,7 +105,7 @@ nav.navbar {
                     position: absolute;
                     margin-left: -9em;
                     margin-top: 1em;
-                    input{
+                    input {
                         padding: 0;
                         border: 0;
                         border-radius: 15px;
@@ -117,30 +122,157 @@ nav.navbar {
 }
 
 section.hero {
-    height: 60em;
     background: linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('../../images/heroBackground.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-    .heroStatement{
+    color: white;
+    font-family: 'gothamBook';
+    .heroStatement {
         font-size: 1.5em;
         text-align: center;
         width: 15em;
         margin: 0 auto;
         color: white;
         margin-top: 10em;
-        span{
+        span {
             font-family: 'gothamBold';
             color: #1D93E9;
         }
     }
-
-    .btnWrapper{
+    .btnWrapper {
         width: 15em;
         height: 10em;
-        background-color: pink;
+        padding-top: 5em;
+        button {
+            width: 10em;
+            height: 2.5em;
+            background-color: transparent;
+            border: 0;
+            padding: 0;
+            padding-top: 0.2em;
+            border: 1px solid white;
+            border-width: thin;
+            display: block;
+            margin: 0 auto;
+            color: white;
+        }
+    }
+    div.row {
+        div.col-sm-4 {
+            margin: 2em 0em;
+            padding: 1em 0em;
+        }
+        h2 {
+            font-size: 1.75em;
+            text-align: center;
+            font-family: 'gothamBold';
+        }
+        p {
+            text-align: center;
+        }
+        // p:nth-child(1),
+        // p:nth-child(2) {
+        //     // padding-bottom: 1em;
+        //     border-bottom: 1px solid white;
+        // }
+        img {
+            width: 4em;
+            margin: 0 auto;
+            display: block;
+        }
+        .border {
+            border: 0.5px solid white;
+            width: 20em;
+            margin: 0 auto;
+        }
+    }
+}
+
+div.logoBorder {
+    height: 36px;
+    background-color: black;
+    div.logoColor {
+        width: 5em;
+        height: 36px;
+        background-color: #1d93e9;
+        float: right;
+    }
+    img {
+        height: 36px;
+        float: right;
+        margin-right: -2em;
+    }
+}
+
+div.carousel {
+    background: linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('../../images/haze.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 30em;
+    font-family: "gothamBook";
+    div.carousel-inner {
+        color: white;
+        img {
+            height: 12em;
+            width: 12em;
+            border-radius: 75px;
+            margin: 2em auto;
+            border: 4px #2cae51 solid;
+        }
+        p {
+            width: 20em;
+            margin: 0 auto;
+            text-align: center;
+        }
+        button {
+            width: 12em;
+            height: 3em;
+            padding: 0;
+            border: 0;
+            font-size: 1.4em;
+            margin: 2em auto;
+            display: block;
+            background-color: #2cae51;
+        }
+        .retail {
+            img {
+                border-color: #E9722D;
+            }
+            button {
+                background-color: #E9722D;
+            }
+        }
+        .banks {
+            img {
+                border-color: #EFAA2E;
+            }
+            button {
+                background-color: #EFAA2E;
+            }
+        }
+        .realEstate {
+            img {
+                border-color: #1E94EA;
+            }
+            button {
+                background-color: #1E94EA;
+            }
+        }
+    }
+}
+
+section.media{
+    div.newsRoom{
+        font-family: 'gothamXLight';
+        h1{
+            text-align: center;
+            font-size: 3em;
+        }
+
     }
 }
 
