--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,6 +21,11 @@ body {
     src: url(../../fonts/Gotham-XLight.ttf);
 }
 
+@font-face {
+    font-family: 'gothamMedium';
+    src: url(../../fonts/Gotham-Medium.ttf);
+}
+
 .navbar-nav > li > a,
 .navbar-brand {
     padding-top: 8px !important;
@@ -265,14 +270,150 @@ div.carousel {
     }
 }
 
-section.media{
-    div.newsRoom{
+section.media {
+    margin: 0;
+    color: black;
+    div.col-sm-4 {
+        padding: 0;
+    }
+    div.newsRoom {
         font-family: 'gothamXLight';
-        h1{
-            text-align: center;
-            font-size: 3em;
+        height: 28em;
+        div {
+            width: 20em;
+            margin: 0 auto;
         }
-
+        h1 {
+            text-align: center;
+            font-size: 2em;
+        }
+        h2 {
+            font-size: 1.5em;
+            font-family: 'gothamBold';
+        }
+    }
+    div.papersReleaseContainer {
+        background-color: #2B2B2B;
+        color: white;
+        height: 28em;
+        div.whitePapers {
+            height: 14em;
+            div.paperIconContainer {
+                margin: 0 auto;
+                display: block;
+                width: 22em;
+            }
+            div.wrapper {
+                width: 30em;
+                display: block;
+                margin: 0 auto;
+                margin-top: 7em;
+                div:nth-child(2) {
+                    border-left: 1px solid white;
+                    padding-left: 2em;
+                }
+                div {
+                    width: 15em;
+                    float: left;
+                    padding: 1em;
+                    font-family: 'gothamMedium';
+                }
+            }
+            h1 {
+                text-align: center;
+                font-size: 2em;
+                width: 8em;
+                float: right;
+                font-family: 'gothamXLight';
+            }
+            img {
+                float: left;
+                height: 3em;
+                margin-top: 1.5em;
+            }
+        }
+        div.pressReleases {
+            background-color: #9E9E9E;
+            height: 14em;
+            h1 {
+                font-family: 'gothamXLight';
+                font-size: 2em;
+                text-align: center;
+                padding-top: 0.5em;
+            }
+            h2 {
+                font-family: 'gothamMedium';
+                font-size: 1.15em;
+                width: 21em;
+                display: block;
+                margin: 0 auto;
+            }
+            h2:nth-child(2) {
+                font-family: 'gothamBold';
+            }
+            p {
+                font-family: 'gothamBook';
+                width: 26.75em;
+                display: block;
+                margin: 0.5em auto;
+                font-size: 0.9em;
+            }
+        }
+    }
+    div.videos {
+        background: linear-gradient( rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('../../images/videos.jpg') no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-position: 0% 83%;
+        height: 28em;
+        color: white;
+        h1:nth-child(1) {
+            font-family: 'gothamXLight';
+            text-align: center;
+            font-size: 2em;
+            padding-top: 0.5em;
+        }
+        h2 {
+            font-family: 'gothamBold';
+            font-size: 1.15em;
+            margin-top: 0;
+        }
+        div.realEstateWebinar,
+        div.whatWeDo {
+            width: 25em;
+            height: 7em;
+            margin: 0 auto;
+            img {
+                height: 3em;
+                float: left;
+                margin-right: 2em;
+            }
+            div {
+                float: left;
+                width: 20em;
+                p {
+                    font-family: 'gothamXLight';
+                    font-size: 0.9em;
+                }
+            }
+        }
+        div.whatWeDo {
+            border-bottom: 1px solid white;
+        }
+        div.videosFooter {
+            h1 {
+                margin-top: 0.5em;
+            }
+            div.row {
+                width: 15em;
+                margin: 0 auto;
+            }
+            img {
+                height: 2em;
+            }
+        }
     }
 }
 
